--- a/recipes/rajma.html
+++ b/recipes/rajma.html
@@ -8,5 +8,9 @@
   </head>
   <body>
     <h1>Rajma</h1>
+    <img
+      src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F9219123.jpg&q=85"
+      alt="rajma with rice"
+    />
   </body>
 </html>
