--- a/recipes/rajma.html
+++ b/recipes/rajma.html
@@ -12,5 +12,14 @@
       src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F9219123.jpg&q=85"
       alt="rajma with rice"
     />
+    <h2>Description</h2>
+    <p>
+      Rajma is comfort food at its best. I like rajma best with simple jeera
+      (cumin) rice. Of course, some roti would be great too.
+    </p>
+    <p>
+      When I was in college, I ate rajma at least once a week. Cheap,
+      nutritious, and comforting. What is not to like?
+    </p>
   </body>
 </html>
