--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>Odin Recipes</h1>
     <ul>
       <li><a href="recipes/rajma.html">rajma</a></li>
+      <li><a href="recipes/chicken-curry.html">chicken-curry</a></li>
     </ul>
   </body>
 </html>
