List all ingredients used in chicken-curry recipe

--- a/recipes/chicken-curry.html
+++ b/recipes/chicken-curry.html
@@ -17,5 +17,26 @@
       This is a really good recipe for spicy Indian chicken curry. It's pretty
       easy to make and tastes really good!
     </p>
+    <h2>Ingredients (Servings: 6)</h2>
+    <ul>
+      <li>3 tablespoons olive oil</li>
+      <li>1 small onion, chopped</li>
+      <li>2 cloves garlic, minced</li>
+      <li>3 tablespoons curry powder</li>
+      <li>1 teaspoon ground cinnamon</li>
+      <li>1 teaspoon paprika</li>
+      <li>1 bay leaf</li>
+      <li>½ teaspoon grated fresh ginger root</li>
+      <li>½ teaspoon white sugar</li>
+      <li>salt to taste</li>
+      <li>
+        2 skinless, boneless chicken breast halves - cut into bite-size pieces
+      </li>
+      <li>1 tablespoon tomato paste</li>
+      <li>1 cup plain yogurt</li>
+      <li>¾ cup coconut milk</li>
+      <li>½ lemon, juiced</li>
+      <li>½ teaspoon cayenne pepper</li>
+    </ul>
   </body>
 </html>
