Steps to cook chicken-curry

--- a/recipes/chicken-curry.html
+++ b/recipes/chicken-curry.html
@@ -38,5 +38,21 @@
       <li>½ lemon, juiced</li>
       <li>½ teaspoon cayenne pepper</li>
     </ul>
+    <h2>Steps</h2>
+    <ol>
+      <li>Heat olive oil in a skillet over medium heat.</li>
+      <li>Saute onion until lightly browned.</li>
+      <li>
+        Stir in garlic, curry powder, cinnamon, paprika, bay leaf, ginger, sugar
+        and salt.
+      </li>
+      <li>Continue stirring for 2 minutes.</li>
+      <li>Add chicken pieces, tomato paste, yogurt, and coconut milk.</li>
+      <li>Bring to a boil, reduce heat, and simmer for 20 to 25 minutes.</li>
+      <li>
+        Remove bay leaf, and stir in lemon juice and cayenne pepper. Simmer 5
+        more minutes.
+      </li>
+    </ol>
   </body>
 </html>
