Link gulab-jamun.html from index.html

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <ul>
       <li><a href="recipes/rajma.html">rajma</a></li>
       <li><a href="recipes/chicken-curry.html">chicken-curry</a></li>
+      <li><a href="recipes/gulab-jamun.html">gulab-jamun</a></li>
     </ul>
   </body>
 </html>
