Add gulab-jamun image

--- a/recipes/gulab-jamun.html
+++ b/recipes/gulab-jamun.html
@@ -8,5 +8,9 @@
   </head>
   <body>
     <h1>Gulab Jamun</h1>
+    <img
+      src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F4481937.jpg&w=596&h=596&c=sc&poi=face&q=85"
+      alt="gulab jamun"
+    />
   </body>
 </html>
