--- a/recipes/gulab-jamun.html
+++ b/recipes/gulab-jamun.html
@@ -12,5 +12,11 @@
       src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F4481937.jpg&w=596&h=596&c=sc&poi=face&q=85"
       alt="gulab jamun"
     />
+    <h2>Description</h2>
+    <p>
+      This is a traditional Indian dessert. Spongy milky balls soaked in rose
+      scented syrup. Delicious with fresh cream, Kulfi, ice cream etc. To make
+      it even more fancy, sprinkle gold-leaf on top of each serving.
+    </p>
   </body>
 </html>
