List ingredients needed to make gulab-jamun recipe

--- a/recipes/gulab-jamun.html
+++ b/recipes/gulab-jamun.html
@@ -18,5 +18,21 @@
       scented syrup. Delicious with fresh cream, Kulfi, ice cream etc. To make
       it even more fancy, sprinkle gold-leaf on top of each serving.
     </p>
+    <h2>Ingredients (Servings: 12)</h2>
+    <ul>
+      <li>2 cups water</li>
+      <li>2 cups white sugar</li>
+      <li>½ teaspoon ground cardamom</li>
+      <li>2 drops rose water (Optional)</li>
+      <li>
+        1 pinch saffron (Optional)½ cup instant dry milk powder (such as
+        Carnation®)
+      </li>
+      <li>2 tablespoons all-purpose flour</li>
+      <li>¼ teaspoon baking soda</li>
+      <li>1 tablespoon unsalted butter (such as Land O'Lakes®)</li>
+      <li>2 tablespoons plain yogurt</li>
+      <li>2 cups vegetable oil for frying</li>
+    </ul>
   </body>
 </html>
