Link index.html page from recipe page

--- a/recipes/gulab-jamun.html
+++ b/recipes/gulab-jamun.html
@@ -60,5 +60,6 @@
         and let them soak in the syrup, covered, 45 minutes to 1 hour.
       </li>
     </ol>
+    <a href="../index.html">Return to main page</a>
   </body>
 </html>
